--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -2,6 +2,8 @@
   "name": "portfolio-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Beatles-without-tea.github.io/portfolio2/portfolio-frontend",
+  
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -11,9 +13,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
-    "homepage": "http://Beatles-without-tea.github.io/portfolio2/portfolio-frontend"
-
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
