--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Beatles-without-tea.github.io/portfolio2/portfolio-frontend",
+  "homepage": "http://Beatles-without-tea.github.io/portfolio2",
   
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
